--- a/src/containers/tags/TagInput/styles.module.scss
+++ b/src/containers/tags/TagInput/styles.module.scss
@@ -1,6 +1,32 @@
-@import "src/styles/variables";
+@import 'src/styles/variables';
 
 .wrap {
   position: relative;
   z-index: 20;
+}
+
+.tag {
+  color: transparent !important;
+  min-width: 100px;
+}
+
+.input {
+  background: none;
+  border: none;
+  color: white;
+  outline: none;
+  display: inline-flex;
+  position: absolute;
+  font: inherit;
+
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  min-width: 100px;
+  padding-left: $tag_height;
+  padding-right: 5px;
+  box-sizing: border-box;
 }
